samples/_failures_safe/1761515083_0e552a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8e28860.c: In function ‘main’:
./samples/SAFE/__tmp_d8e28860.c:128:30: error: missing terminating " character
  128 |     add_log_entry(&analyzer, "2024-01-15
      |                              ^~~~~~~~~~~
./samples/SAFE/__tmp_d8e28860.c:128:5: error: expected expression at end of input
  128 |     add_log_entry(&analyzer, "2024-01-15
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_d8e28860.c:128:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_d8e28860.c:50:5: note: declared here
   50 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_d8e28860.c:128:5: error: expected declaration or statement at end of input
  128 |     add_log_entry(&analyzer, "2024-01-15
      |     ^~~~~~~~~~~~~
